--- a/ProjectSettings/Packages/com.unity.connect.share/Settings.json
+++ b/ProjectSettings/Packages/com.unity.connect.share/Settings.json
@@ -21,7 +21,7 @@
             {
                 "type": "System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "buildOutputDirList",
-                "value": "{\"m_Value\":\"/Users/jonhiggins/Unity Projects/Peppas park adventure 2/WebGL Builds;;;;;;;;;\"}"
+                "value": "{\"m_Value\":\"/Users/jonhiggins/Unity Projects/Peppas park adventure 2/build;/Users/jonhiggins/Unity Projects/Peppas park adventure 2/WebGL Builds;;;;;;;;\"}"
             }
         ]
     }
